manifests/rate-route-path.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: rates
spec:
  hostnames:
  - rates.lattice.demo
  parentRefs:
  - name: lattice-demo
    sectionName: http
  rules:
  - backendRefs:
    - name: parking
      kind: Service
      port: 8090
    matches:
    - path:
        type: PathPrefix
        value: /parking
  - backendRefs:
    - name: review
      kind: Service
      port: 8090
    matches:
    - path:
        type: PathPrefix
        value: /review
